
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2025 MAY 13b
  * in model/chem/_NH3_Plasma_32s/arakoni2007omprakas.c
    - added version 12 which corresponds to rodriguezv2
    

2025 MAY 13a
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Semfield(), now calls _zetav_Rodriguez2025() for the N2VIBMODEL_RODRIGUEZ2025
    - in find_Qe_Rodriguez2025() and find_dSe_dU_transport_Rodriguez2025() now multiplies the 
      electron heating terms by _zetav_Rodriguez2025()
    - in find_Qe_Rodriguez2025_ADHOC(), now multiplies the electron heating terms by 
      _zetav_Rodriguez2025() and limit electron heating to N2
    - in find_dSe_dU_transport_Rodriguez2025_ADHOC(), now linearize only the electron cooling
      terms
  * in model/thermo/_generic/thermo.c
    - added _zetav_from_Te_Rodriguez2025()
    

2025 MAY 05a
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Qe_Rodriguez2025() and find_Qe_Rodriguez2025_ADHOC(), limited the inelastic heating
      to N2 only
      

2025 MAY 01a
  * in various files:
    - renamed N2VIBMODEL_MACHERET to N2VIBMODEL_PARENT2024
  * in model/fluid/_Navier-Stokes_plasma/fluid.c
    - removed N2VIBJOULEHEATING and N2VIBJOULEHEATINGMODEL
    - added N2VIBMODEL_RODRIGUEZ2025
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Semfield() and find_dSemfield_dU(), added N2VIBMODEL_RODRIGUEZ2025
    - in _K_l(), updated the splines
    - deleted _zetav()
    - in find_Qe_Rodriguez2025(), now apply the heating to all inelastic cooling terms
  

2025 APR 24a
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - updated the function _K_l() by extrapolating the rates linearly down to 300 K


2025 APR 22b
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c